News UAT/force-app/main/default/objects/Creative_Services_Deliverables__c/Creative_Services_Deliverables__c.object-meta.xml
<CustomObject>
    <description>NLM custom object. 

MD relationship with Opportunity.</description>
    <label>Creative Services Deliverables</label>
    <nameField>
        <displayFormat>CSR-{0000}</displayFormat>
        <label>CS Req ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creative Services Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>