News UAT/force-app/main/default/objects/Creative_Services_Deliverables__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <label>Assets</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client provided</fullName>
            </value>
            <value>
                <fullName>Photoshoot required</fullName>
            </value>
            <value>
                <fullName>Video shoot required</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>