News UAT/force-app/main/default/objects/Creative_Services_Deliverables__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australian Golf Digest</fullName>
            </value>
            <value>
                <fullName>Birth.com.au</fullName>
            </value>
            <value>
                <fullName>Buro247.com</fullName>
            </value>
            <value>
                <fullName>BestRecipes.com.au</fullName>
            </value>
            <value>
                <fullName>Country Style</fullName>
            </value>
            <value>
                <fullName>Delicious</fullName>
            </value>
            <value>
                <fullName>Donna Hay</fullName>
            </value>
            <value>
                <fullName>DonnaHay.com.au</fullName>
            </value>
            <value>
                <fullName>GQ</fullName>
            </value>
            <value>
                <fullName>GQ.com.au</fullName>
            </value>
            <value>
                <fullName>Inside Out</fullName>
            </value>
            <value>
                <fullName>InsideOut.com.au</fullName>
            </value>
            <value>
                <fullName>Kidspot.com.au</fullName>
            </value>
            <value>
                <fullName>Super Food Ideas</fullName>
            </value>
            <value>
                <fullName>Taste Magazine</fullName>
            </value>
            <value>
                <fullName>Taste.com.au</fullName>
            </value>
            <value>
                <fullName>Vogue Australia</fullName>
            </value>
            <value>
                <fullName>Vogue.com.au</fullName>
            </value>
            <value>
                <fullName>Vogue Living</fullName>
            </value>
            <value>
                <fullName>VogueLiving.com.au</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>