News UAT/force-app/main/default/objects/Creative_Services_Deliverables__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Creative_Services_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>