News UAT/force-app/main/default/objects/Creative_Services_Deliverables__c/fields/Client_likes_dislikes__c.field-meta.xml
<CustomField>
    <fullName>Client_likes_dislikes__c</fullName>
    <inlineHelpText>Is there anything we have done before that the client likes or is there anything they don&#39;t want?</inlineHelpText>
    <label>Client likes / dislikes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>