News UAT/force-app/main/default/objects/Creative_Services_Deliverables__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <inlineHelpText>To be qualified by the relevant brand</inlineHelpText>
    <label>Deliverable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Print – Advertorial</fullName>
            </value>
            <value>
                <fullName>Print – Booklet Tip-On</fullName>
            </value>
            <value>
                <fullName>Print – Other</fullName>
            </value>
            <value>
                <fullName>Website – Display Media</fullName>
            </value>
            <value>
                <fullName>Website – OTP</fullName>
            </value>
            <value>
                <fullName>Website – Online advertorial</fullName>
            </value>
            <value>
                <fullName>Website – Rich Media</fullName>
            </value>
            <value>
                <fullName>Website – Hub / Section</fullName>
            </value>
            <value>
                <fullName>Website – Partner Collection</fullName>
            </value>
            <value>
                <fullName>Mobile – Display Media</fullName>
            </value>
            <value>
                <fullName>Mobile – OTP</fullName>
            </value>
            <value>
                <fullName>Mobile – Rich Media</fullName>
            </value>
            <value>
                <fullName>iPad – High Touch</fullName>
            </value>
            <value>
                <fullName>EDM</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Video – Behind the Scenes</fullName>
            </value>
            <value>
                <fullName>Video – How-to-series</fullName>
            </value>
            <value>
                <fullName>Video – Stop Motion</fullName>
            </value>
            <value>
                <fullName>Video – Sponsored Editorial</fullName>
            </value>
            <value>
                <fullName>Video – Other</fullName>
            </value>
            <value>
                <fullName>Trade – Flyer</fullName>
            </value>
            <value>
                <fullName>Trade – Presentation Template</fullName>
            </value>
            <value>
                <fullName>Trade – Deck</fullName>
            </value>
            <value>
                <fullName>Trade – Mind Map</fullName>
            </value>
            <value>
                <fullName>Trade – Other</fullName>
            </value>
            <value>
                <fullName>Management (please specify)</fullName>
            </value>
            <value>
                <fullName>Event (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>