News UAT/force-app/main/default/objects/Creative_Services_Deliverables__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>Specific requirements for this deliverable e.g  mrec / skins / facebook / twitter / mock / presentation template / repeat creative etc</inlineHelpText>
    <label>Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>