News UAT/force-app/main/default/objects/Creative_Services_Deliverables__c/fields/Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Live_Date__c</fullName>
    <inlineHelpText>e.g. mag issue date, digital live date or date required</inlineHelpText>
    <label>Live Date</label>
    <type>Date</type>
</CustomField>